--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'HelloWorld' do
+target 'template' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  target 'HelloWorldTests' do
+  target 'templateTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -23,10 +23,10 @@ target 'HelloWorld' do
   end
 end
 
-target 'HelloWorld-tvOS' do
-  # Pods for HelloWorld-tvOS
+target 'template-tvOS' do
+  # Pods for template-tvOS
 
-  target 'HelloWorld-tvOSTests' do
+  target 'template-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
